--- a/app/pages/visit-report-list/visit-report-list.html
+++ b/app/pages/visit-report-list/visit-report-list.html
@@ -19,4 +19,6 @@
         </ion-select>
     </ion-item>
   </ion-list>
+
+  <button fab fab-right fab-bottom fab-fixed danger><ion-icon name="add"></ion-icon></button>
 </ion-content>
