--- a/app/pages/settings/settings.html
+++ b/app/pages/settings/settings.html
@@ -7,18 +7,20 @@
 </ion-navbar>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Regras de notificações</ion-list-header>
+  <ion-item-divider light>Regras de notificações</ion-item-divider>
+  <ion-list no-lines>
     <ion-item>
+      <ion-icon name="locate" item-left></ion-icon>
       <ion-label>Geolocalização</ion-label>
       <ion-toggle secondary [(ngModel)]="notificationRole.geolocalization"
         (click) ="toggleNotificationRole('hour')"></ion-toggle>
     </ion-item>
     <ion-item *ngIf="notificationRole.geolocalization">
-      <ion-label>Endereço</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-icon name="pin" item-left></ion-icon>
+      <ion-input type="text" placeholder="Endereço"></ion-input>
     </ion-item>
     <ion-item>
+      <ion-icon name="time" item-left></ion-icon>
       <ion-label>Horário</ion-label>
       <ion-toggle secondary [(ngModel)]="notificationRole.hour"
         (click)="toggleNotificationRole('geolocalization')"></ion-toggle>
@@ -26,34 +28,39 @@
 
     <ion-list *ngIf="notificationRole.hour">
       <ion-item>
+        <ion-icon name="sunny" item-left></ion-icon>
         <ion-label>Chegada</ion-label>
         <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm" [(ngModel)]="hourConfig.arriveTime"></ion-datetime>
       </ion-item>
       <ion-item>
+        <ion-icon name="restaurant" item-left></ion-icon>
         <ion-label>Almoço</ion-label>
         <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm" [(ngModel)]="hourConfig.launchTime"></ion-datetime>
       </ion-item>
       <ion-item>
+        <ion-icon name="cafe" item-left></ion-icon>
         <ion-label>Volta almoço</ion-label>
         <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm" [(ngModel)]="hourConfig.backLaunchTime"></ion-datetime>
       </ion-item>
       <ion-item>
+        <ion-icon name="moon" item-left></ion-icon>
         <ion-label>Saída</ion-label>
         <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm" [(ngModel)]="hourConfig.endDayTime"></ion-datetime>
       </ion-item>
     </ion-list>
-
-    <ion-list-header>Valores padrões</ion-list-header>
+  </ion-list>
+  <ion-item-divider light>Valores padrões</ion-item-divider>
+  <ion-list no-lines>
     <ion-item>
-      <ion-label>Valor almoço diário</ion-label>
+      <ion-label stacked>Valor almoço diário</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Valor transporte diário</ion-label>
+      <ion-label stacked>Valor transporte diário</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Descrição padrão</ion-label>
+      <ion-label stacked>Descrição padrão</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
   </ion-list>
