Mudanças na página inicial

--- a/app/pages/homepage/homepage.html
+++ b/app/pages/homepage/homepage.html
@@ -9,7 +9,7 @@
 
 <ion-content class="getting-started">
   <ion-item-divider light>Mês de Junho</ion-item-divider>
-  <ion-list no-lines>
+  <ion-list no-lines class="overview">
     <ion-item>
       <ion-icon name='cash' item-left></ion-icon>
       Valor total
