Placeholders na página de configurações

--- a/app/pages/settings/settings.html
+++ b/app/pages/settings/settings.html
@@ -4,6 +4,11 @@
     <ion-icon name="menu"></ion-icon>
   </button>
   <ion-title>Configurações</ion-title>
+  <ion-buttons end>
+    <button royal>
+      <ion-icon name="checkmark"></ion-icon>
+    </button>
+  </ion-buttons>
 </ion-navbar>
 
 <ion-content>
@@ -53,15 +58,15 @@
   <ion-list no-lines>
     <ion-item>
       <ion-label stacked>Valor almoço diário</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" placeholder="30"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Valor transporte diário</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" placeholder="15"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Descrição padrão</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" placeholder="Excelente dia de trabalho"></ion-input>
     </ion-item>
   </ion-list>
 </ion-content>
