Adicionada toast notification
Agora vou dormir na boa

--- a/app/pages/settings/settings.html
+++ b/app/pages/settings/settings.html
@@ -5,7 +5,7 @@
   </button>
   <ion-title>Configurações</ion-title>
   <ion-buttons end>
-    <button royal>
+    <button royal (click)="saveConfigs()">
       <ion-icon name="checkmark"></ion-icon>
     </button>
   </ion-buttons>
