--- a/app/app.html
+++ b/app/app.html
@@ -5,7 +5,7 @@
   </ion-toolbar>
 
   <ion-content id="sidebar-menu">
-    <ion-list no-lines class="first-block">
+    <ion-list no-lines>
       <button ion-item *ngFor="let p of pages" (click)="openPage(p)">
         <ion-icon name="{{ p.icon }}" item-left></ion-icon> {{p.title}}
       </button>
