--- a/app/pages/homepage/homepage.html
+++ b/app/pages/homepage/homepage.html
@@ -45,6 +45,9 @@
     <ion-item-sliding>
       <ion-item *ngFor="let v of visitsReportSummaries" class="report summary">
         <div class="column">
+          <div class="summary-avatar" item-left>
+            <ion-icon name="paper"></ion-icon>
+          </div>
           <h2>{{ v.descricao }}</h2>
           <p class="company">{{ v.cliente }}</p>
         </div>
@@ -64,6 +67,9 @@
     <!-- Visit Report List -->
     <ion-item *ngFor="let v of visitsReport" class="report">
       <div class="column">
+        <div class="avatar" item-left>
+          {{ v.cliente[0] }}
+        </div>
         <h2>{{ v.descricao }}</h2>
         <p class="company">{{ v.cliente }}</p>
       </div>
