--- a/app/app.html
+++ b/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu [content]="content">
 
   <ion-toolbar danger>
-    <ion-title>Cheguei</ion-title>
+    <ion-title>Cheguei!</ion-title>
   </ion-toolbar>
 
   <ion-content id="sidebar-menu">
