--- a/app/pages/homepage/homepage.html
+++ b/app/pages/homepage/homepage.html
@@ -80,6 +80,6 @@
     </ion-item>
   </ion-list>
 
-  <button fab fab-right fab-bottom fab-fixed danger><ion-icon name="add"></ion-icon></button>
+  <button fab fab-right fab-bottom fab-fixed danger (click)="openNewReportPage()"><ion-icon name="add"></ion-icon></button>
 
 </ion-content>
