--- a/app/pages/visit-report-list/visit-report-list.html
+++ b/app/pages/visit-report-list/visit-report-list.html
@@ -72,5 +72,5 @@
     </ion-item>
   </ion-list>
 
-  <button fab fab-right fab-bottom fab-fixed danger><ion-icon name="add"></ion-icon></button>
+  <button fab fab-right fab-bottom fab-fixed danger (click)="openNewReportPage()"><ion-icon name="add"></ion-icon></button>
 </ion-content>
