--- a/app/pages/newReport/newReport.html
+++ b/app/pages/newReport/newReport.html
@@ -8,7 +8,50 @@
 </ion-navbar>
 
 <ion-content>
-  <ion-item-divider light>Reembolso</ion-item-divider>
+  <ion-list no-lines>
+    <ion-item>
+      <ion-icon name="restaurant" item-left></ion-icon>
+      <ion-label stacked>Cilente</ion-label>
+      <ion-input type="text" placeholder="30"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="restaurant" item-left></ion-icon>
+      <ion-label stacked>Descrição</ion-label>
+      <ion-input type="text" placeholder="30"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="calendar" item-left></ion-icon>
+      <ion-label>Data</ion-label>
+      <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm"></ion-datetime>
+    </ion-item>
+  </ion-list>
+
+  <ion-item-divider light>Tempo</ion-item-divider>
+  <ion-list no-lines>
+    <ion-item>
+      <ion-icon name="sunny" item-left></ion-icon>
+      <ion-label>Chegada</ion-label>
+      <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm"></ion-datetime>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="moon" item-left></ion-icon>
+      <ion-label>Saída</ion-label>
+      <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm"></ion-datetime>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="restaurant" item-left></ion-icon>
+      <ion-label>Tempo improdutivo</ion-label>
+      <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm"></ion-datetime>
+    </ion-item>
+    <ion-item>
+      <ion-icon name="restaurant" item-left></ion-icon>
+      <ion-label>Intervalo de espera</ion-label>
+      <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm"></ion-datetime>
+    </ion-item>
+  </ion-list>
+
+  <ion-item-divider light>Tempo</ion-item-divider>
+
   <ion-list no-lines>
     <ion-item>
       <ion-icon name="restaurant" item-left></ion-icon>
