--- a/app/pages/settings/settings.html
+++ b/app/pages/settings/settings.html
@@ -22,7 +22,7 @@
     </ion-item>
     <ion-item *ngIf="notificationRole.geolocalization">
       <ion-icon name="pin" item-left></ion-icon>
-      <ion-input type="text" placeholder="Endereço"></ion-input>
+      <ion-input type="text" placeholder="Endereço" disabled (click)="openSearchAddressPage()"></ion-input>
     </ion-item>
     <ion-item>
       <ion-icon name="time" item-left></ion-icon>
@@ -58,11 +58,11 @@
   <ion-list no-lines>
     <ion-item>
       <ion-label stacked>Valor almoço diário</ion-label>
-      <ion-input type="text" placeholder="30"></ion-input>
+      <ion-input type="number" placeholder="30"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Valor transporte diário</ion-label>
-      <ion-input type="text" placeholder="15"></ion-input>
+      <ion-input type="number" placeholder="15"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Descrição padrão</ion-label>
