box-shadow em toolbar para android

--- a/app/app.html
+++ b/app/app.html
@@ -1,6 +1,6 @@
 <ion-menu [content]="content">
 
-  <ion-toolbar danger>
+  <ion-toolbar danger class="cheguei-menu-toolbar">
     <ion-title>Cheguei!</ion-title>
   </ion-toolbar>
 
