--- a/app/pages/visit-report-list/visit-report-list.html
+++ b/app/pages/visit-report-list/visit-report-list.html
@@ -33,11 +33,11 @@
   </ion-list>
   <ion-item-divider light>Reembolsos</ion-item-divider>
   <ion-list no-lines>
-    <!-- Summary List -->
+    <!-- Draft List -->
     <ion-item-sliding>
-      <ion-item *ngFor="let v of visitsReportSummaries" class="report summary" (press)="pressReport(v)">
+      <ion-item *ngFor="let v of visitsReportDrafts" class="report draft" (press)="pressReport(v)">
         <div class="column">
-          <div class="summary-avatar" item-left>
+          <div class="draft-avatar" item-left>
             <ion-icon name="paper"></ion-icon>
           </div>
           <h2>{{ v.descricao }}</h2>
