--- a/app/pages/newReport/newReport.html
+++ b/app/pages/newReport/newReport.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-list no-lines>
     <ion-item>
-      <ion-icon name="contact" item-left></ion-icon>
+      <ion-icon name="home" item-left></ion-icon>
       <ion-input type="text" placeholder="Cilente"></ion-input>
     </ion-item>
     <ion-item>
