--- a/app/pages/visit-report-list/visit-report-list.html
+++ b/app/pages/visit-report-list/visit-report-list.html
@@ -7,9 +7,13 @@
     {{ selectedReportsCount }}
   </ion-title>
   <ion-buttons end>
-    <button royal>
+    <button>
       <ion-icon class="top-icon" name="trash" *ngIf="isAnyReportSelected()"></ion-icon>
+    </button>
+    <button>
       <ion-icon class="top-icon" name="checkmark-circle" *ngIf="isAnyReportSelected()"></ion-icon>
+    </button>
+    <button (click)="presentActionList()">
       <ion-icon name="more"></ion-icon>
     </button>
   </ion-buttons>
@@ -40,9 +44,7 @@
   <ion-list no-lines>
     <!-- Draft List -->
     <ion-item-sliding>
-      <button ion-item *ngFor="let v of visitsReportDrafts"
-        [ngClass]="{'selected-report draft': v.selected, 'report draft': !v.selected}"
-        (press)="pressReport(v)" (click)="openEditPage(v)">
+      <button ion-item class="report draft" *ngFor="let v of visitsReportDrafts" (click)="openEditDraft(v)">
         <div class="column">
           <div class="draft-avatar" item-left>
             <ion-icon name="paper"></ion-icon>
