Ajuste em rascunhos e ação deletar reembolsos

--- a/app/pages/homepage/homepage.html
+++ b/app/pages/homepage/homepage.html
@@ -61,6 +61,10 @@
           <ion-icon name="checkmark"></ion-icon>
           Salvar
         </button>
+        <button danger>
+          <ion-icon name="trash"></ion-icon>
+          Deletar
+        </button>
       </ion-item-options>
     </ion-item-sliding>
 
