--- a/app/pages/homepage/homepage.html
+++ b/app/pages/homepage/homepage.html
@@ -42,8 +42,8 @@
   <ion-item-divider light>Reembolsos</ion-item-divider>
   <ion-list no-lines>
     <!-- Draft List -->
-    <ion-item-sliding>
-      <button ion-item *ngFor="let v of visitsReportDrafts" class="report draft" (click)="openEditPage(v)">
+    <ion-item-sliding *ngFor="let v of visitsReportDrafts">
+      <button ion-item class="report draft" (click)="openEditPage(v)">
         <div class="column">
           <div class="draft-avatar" item-left>
             <ion-icon name="paper"></ion-icon>
@@ -61,7 +61,7 @@
           <ion-icon name="checkmark"></ion-icon>
           Salvar
         </button>
-        <button danger>
+        <button danger (click)="deleteDraft(v)">
           <ion-icon name="trash"></ion-icon>
           Deletar
         </button>
