Adicionada página modal para aprovar reembolsos

--- a/app/pages/visit-report-list/visit-report-list.html
+++ b/app/pages/visit-report-list/visit-report-list.html
@@ -10,7 +10,7 @@
     <button (click)="deleteReports()">
       <ion-icon class="top-icon" name="trash" *ngIf="isAnyReportSelected()"></ion-icon>
     </button>
-    <button (click)="approveReports()">
+    <button (click)="openApproveReportsPage()">
       <ion-icon class="top-icon" name="checkmark-circle" *ngIf="isAnyReportSelected()"></ion-icon>
     </button>
     <button (click)="presentActionList()">
