--- a/app/pages/newReport/newReport.html
+++ b/app/pages/newReport/newReport.html
@@ -7,7 +7,7 @@
   </ion-buttons>
 </ion-navbar>
 
-<ion-content>
+<ion-content class="new-report">
   <ion-list no-lines>
     <ion-item>
       <ion-icon name="home" item-left></ion-icon>
