Alterações para escolher dia da semana em configurações

--- a/app/pages/settings/settings.html
+++ b/app/pages/settings/settings.html
@@ -58,13 +58,10 @@
     </ion-list>
     <ion-item>
       <ion-icon name="calendar" item-left></ion-icon>
-      <button round secondary class="weak-day" (click)="toggleWeakDay($event, 0)">S</button>
-      <button round secondary class="weak-day" (click)="toggleWeakDay($event, 1)">T</button>
-      <button round secondary class="weak-day" (click)="toggleWeakDay($event, 2)">Q</button>
-      <button round secondary class="weak-day" (click)="toggleWeakDay($event, 3)">Q</button>
-      <button round secondary class="weak-day" (click)="toggleWeakDay($event, 4)">S</button>
-      <button round secondary class="weak-day" clear (click)="toggleWeakDay($event, 5)">S</button>
-      <button round secondary class="weak-day" clear (click)="toggleWeakDay($event, 6)">D</button>
+      <button round secondary class="week-day" *ngFor="let wd of notificationRole.weekDay"
+        [attr.clear]="!wd.checked ? '' : null" (click)="toggleWeekDay(wd)">
+        {{ wd.code }}
+      </button>
     </ion-item>
   </ion-list>
   <ion-item-divider light>Valores padrões</ion-item-divider>
