:bug: Correção de bug com datas

--- a/app/pages/newReport/newReport.html
+++ b/app/pages/newReport/newReport.html
@@ -21,7 +21,7 @@
     <ion-item>
       <ion-icon name="calendar" item-left></ion-icon>
       <ion-label>Data</ion-label>
-      <ion-datetime displayFormat="DD MMM YYYY" [(ngModel)]="newReport.data"></ion-datetime>
+      <ion-datetime displayFormat="DD MMM YYYY" [(ngModel)]="newReport.datePicker"></ion-datetime>
     </ion-item>
   </ion-list>
 
