--- a/app/pages/homepage/homepage.html
+++ b/app/pages/homepage/homepage.html
@@ -52,7 +52,7 @@
           <p class="company">{{ v.cliente }}</p>
         </div>
         <div class="column right">
-          <h3>{{ v.data | date:"dd/MM/yyyy" }}</h3>
+          <h3>{{ v.data | date:"dd MMM yyyy " }}</h3>
           <p class="price">R$ {{ sumReportCost(v) }}</p>
         </div>
       </button>
@@ -78,7 +78,7 @@
         <p class="company">{{ v.cliente }}</p>
       </div>
       <div class="column right">
-        <h3>{{ v.data | date:"dd/MM/yyyy" }}</h3>
+        <h3>{{ v.data | date:"dd MMM yyyy " }}</h3>
         <p class="price">R$ {{ sumReportCost(v) }}</p>
       </div>
     </button>
