--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -17,7 +17,7 @@
         <ion-title>Cheguei!</ion-title>
       </ion-toolbar>
       <ion-list no-lines padding>
-        <button danger outline block *ngIf="invalidLogin">Usuário ou senha incorretos</button>
+        <section class="error-box" *ngIf="invalidLoginMsg">{{ invalidLoginMsg }}</section>
         <ion-item class="input">
             <ion-label stacked>Usuário</ion-label>
             <ion-input type="text" required [(ngModel)]="authInfo.user"></ion-input>
