Mudados ícones e alguns estilos

--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -12,7 +12,7 @@
       <h5>Crie rascunhos e salve-os quando puder</h5>
     </ion-slide>
 
-    <ion-slide>
+    <ion-slide class="login-slide">
       <h1 class="login-logo">Cheguei!</h1>
       <ion-list no-lines padding>
         <section class="error-box" *ngIf="invalidLoginMsg">{{ invalidLoginMsg }}</section>
