--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -1,7 +1,7 @@
 <ion-content class="login-page">
   <ion-slides pager>
     <ion-slide padding class="art-box">
-       <ion-icon name="bulb" danger></ion-icon>
+       <ion-icon name="pin" danger></ion-icon>
       <h1><strong>Cheguei!</strong></h1>
       <h5>O melhor app de reembolso de despesas do <strong>UNIVERSO</strong>!</h5>
     </ion-slide>
@@ -13,9 +13,7 @@
     </ion-slide>
 
     <ion-slide>
-      <ion-toolbar danger>
-        <ion-title>Cheguei!</ion-title>
-      </ion-toolbar>
+      <h1 class="login-logo">Cheguei!</h1>
       <ion-list no-lines padding>
         <section class="error-box" *ngIf="invalidLoginMsg">{{ invalidLoginMsg }}</section>
         <ion-item class="input">
